result of tech session

--- a/force-app/main/default/classes/ApexController.cls
+++ b/force-app/main/default/classes/ApexController.cls
@@ -1,14 +1,20 @@
 public with sharing class ApexController {
-    public ApexController() {
+    public IService service;
 
+    public ApexController() {
+        this.service = (IService) Application.serviceFactory.newInstanceFor(IService.class);
     }
 
     @AuraEnabled
     public static string giveMeYourName(){
-        try {
-            return new Dependency_A().whoAreYou();
-        } catch (Exception e) {
-            throw new AuraHandledException(e.getMessage());
-        }
+        // try {
+            return new ApexController().whoAreYou();
+        // } catch (Exception e) {
+        //     throw new AuraHandledException(e.getMessage());
+        // }
+    }
+
+    public string whoAreYou(){
+        return this.service.whoAreYou();
     }
 }
